# mackerel-plugin-rs

./: .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: graph.rs  lib.rs  metric.rs  plugin.rs  unit.rs
tests/: graph.rs  lib.rs  metric.rs  plugin.rs
