[package]
name = "mackerel_plugin"
version = "0.2.5"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "Mackerel plugin helper library"
repository = "https://github.com/itchyny/mackerel-plugin-rs"
readme = "README.md"
license = "MIT"
keywords = ["cli", "mackerel"]
edition = "2021"

[dependencies]
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.107"
