[package]
name = "mackerel_plugin"
version = "0.2.5"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "Mackerel plugin helper library"
repository = "https://github.com/itchyny/mackerel-plugin-rs"
readme = "README.md"
license = "MIT"
keywords = ["cli", "mackerel"]
edition = "2021"

[dependencies]
auto_enums = "0.8.3"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
serde_with = "3.4.0"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.18.2"
